data/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AHAContactNumber__c</fullName>
        <label>AHA Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_from_Goals__c</fullName>
        <label>Actual from Goals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agreement_Notes__c</fullName>
        <label>Agreement Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Over_Quota__c</fullName>
        <label>Amount Over Quota</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Association</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <inlineHelpText>Max 2000 characters.</inlineHelpText>
        <label>Commission Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Split_Total__c</fullName>
        <label>Commission Split Total</label>
        <summarizedField>Commission_Split__c.Total_Commission_for_Contract_Term__c</summarizedField>
        <summaryForeignKey>Commission_Split__c.Commission_Recipient__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Consultant</fullName>
                </value>
                <value>
                    <fullName>Client / Prospect</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>MC / Client</fullName>
                </value>
                <value>
                    <fullName>Legal Counsel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D365ContactGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365ContactGuid</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D365ParentCustomerGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365ParentCustomerGuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dallas_Visit_Date__c</fullName>
        <label>Dallas Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Photo_URL__c</fullName>
        <label>Employee_Photo_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Search_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Search Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (External Search Owner)</relationshipLabel>
        <relationshipName>ContactsExternalSearch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goes_By__c</fullName>
        <inlineHelpText>The name a person prefers to be addressed by, e.g., first name Robert, goes by Bob.</inlineHelpText>
        <label>Goes By</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Search_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The internal person handling the recruiting process</inlineHelpText>
        <label>Internal Search Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Internal Recruiter</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Reference_Date__c</fullName>
        <label>Key Reference Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Key_Reference__c</fullName>
        <label>Key Reference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Assigned_State__c</fullName>
        <label>MC Assigned State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Comments__c</fullName>
        <label>MC Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC_Commission__c</fullName>
        <label>MC Commission</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MC_Compensation_Plan__c</fullName>
        <label>MC Compensation Plan</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC_Management_Notes__c</fullName>
        <label>MC Management Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC_Orientation_Date__c</fullName>
        <label>MC Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MC_Rating__c</fullName>
        <label>MC Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active/New</fullName>
                </value>
                <value>
                    <fullName>Active/Phase Out</fullName>
                </value>
                <value>
                    <fullName>Active/PIP</fullName>
                </value>
                <value>
                    <fullName>Active/Reserve</fullName>
                </value>
                <value>
                    <fullName>Active/Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Active/Watch</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Prospect (Recruiter only)</fullName>
                </value>
                <value>
                    <fullName>Reactivated</fullName>
                </value>
                <value>
                    <fullName>Territory Suspended</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Recruiter__c</fullName>
        <label>MC Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Recruitment_Stage__c</fullName>
        <label>MC Recruitment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Start_Date__c</fullName>
        <label>MC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MC_Status__c</fullName>
        <label>MC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Active-Targeted</fullName>
                    <isActive>false</isActive>
                    <label>Active-Targeted</label>
                </value>
                <value>
                    <fullName>Associate</fullName>
                    <isActive>false</isActive>
                    <label>Associate</label>
                </value>
                <value>
                    <fullName>EC Prospect - Open</fullName>
                    <isActive>false</isActive>
                    <label>EC Prospect - Open</label>
                </value>
                <value>
                    <fullName>EC Prospect - Reserve</fullName>
                    <isActive>false</isActive>
                    <label>EC Prospect - Reserve</label>
                </value>
                <value>
                    <fullName>EC Prospect - Unsuccessful</fullName>
                    <isActive>false</isActive>
                    <label>EC Prospect - Unsuccessful</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Phasing Out</fullName>
                    <isActive>false</isActive>
                    <label>Phasing Out</label>
                </value>
                <value>
                    <fullName>Temporarily Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Temporarily Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Type__c</fullName>
        <label>MC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Non-Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quota_Over_Goals__c</fullName>
        <label>Quota Over Goals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_Search_Unsuccessful__c</fullName>
        <label>Reason Search Unsuccessful</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recruited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruited By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Recruited By)</relationshipLabel>
        <relationshipName>ContactsRecruitedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiter_Commission__c</fullName>
        <inlineHelpText>Enter as a percentage value</inlineHelpText>
        <label>Recruiter Commission</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reference_Notes__c</fullName>
        <label>Reference Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <label>Sales Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Superintendent</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Energy/Environmental</fullName>
                </value>
                <value>
                    <fullName>Purchasing/Procurement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_Agreement_Received__c</fullName>
        <label>Signed Agreement Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Name__c</fullName>
        <label>Spouse/Partner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Exec_Considered__c</fullName>
        <label>State Exec Considered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Inactive</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Active_Cenergistic_Employees</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Active_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Employee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Cenergistic Employees</label>
    </listViews>
    <listViews>
        <fullName>Active_MCs</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>MC_Assigned_State__c</columns>
        <columns>MC_Start_Date__c</columns>
        <columns>MC_Rating__c</columns>
        <columns>MC_Management_Notes__c</columns>
        <columns>MC_Type__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MC_Rating__c</field>
            <operation>equals</operation>
            <value>Active/Watch,Active/New,Active/Satisfactory,Active/Phase Out,Active/PIP,Active/Reserve,Reactivated</value>
        </filters>
        <label>Active MCs</label>
    </listViews>
    <listViews>
        <fullName>Active_MCs_with_addresses</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>MC_Start_Date__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.ADDRESS1_STREET</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Market Consultant,MC / Client</value>
        </filters>
        <filters>
            <field>MC_Rating__c</field>
            <operation>equals</operation>
            <value>Active/Watch,Active/New,Active/Satisfactory,Active/Phase Out,Active/PIP,Active/Reserve,Reactivated</value>
        </filters>
        <label>Active MCs with Addresses</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
            <value>jstout@cenergistic.com</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_ACTIVE_Contacts</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All ACTIVE Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_INACTIVE_Contacts</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All INACTIVE Contacts</label>
    </listViews>
    <listViews>
        <fullName>Cenergistic_Employees</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Active_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>cenergistic</value>
        </filters>
        <label>Cenergistic Employees</label>
    </listViews>
    <listViews>
        <fullName>Key_References</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>Key_Reference_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Reference__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Key References</label>
    </listViews>
    <listViews>
        <fullName>MC_Analysis</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>MC_Rating__c</columns>
        <columns>MC_Management_Notes__c</columns>
        <columns>MC_Start_Date__c</columns>
        <columns>MC_Type__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
            <value>Market Consultant,MC / Client</value>
        </filters>
        <filters>
            <field>MC_Rating__c</field>
            <operation>notEqual</operation>
            <value>,Territory Suspended,Prospect,Prospect (Recruiter only),Pending</value>
        </filters>
        <label>MC Analysis</label>
        <sharedTo>
            <role>CRM_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MC_History</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>MC_Assigned_State__c</columns>
        <columns>MC_Start_Date__c</columns>
        <columns>MC_Rating__c</columns>
        <columns>MC_Management_Notes__c</columns>
        <columns>MC_Type__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MC_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>MC History</label>
        <sharedTo>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>Status__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>External_Search_Owner__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>